testdata/baselines/reference/submodule/conformance/typedefCrossModule2.errors.txt
use.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
use.js(2,19): error TS2307: Cannot find module './mod1.js' or its corresponding type declarations.
use.js(4,12): error TS2503: Cannot find namespace 'mod'.


==== use.js (3 errors) ====
    var mod = require('./mod1.js');
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    /** @type {import("./mod1.js").Baz} */
                      ~~~~~~~~~~~
!!! error TS2307: Cannot find module './mod1.js' or its corresponding type declarations.
    var b;
    /** @type {mod.Baz} */
               ~~~
!!! error TS2503: Cannot find namespace 'mod'.
    var bb;
    var bbb = new mod.Baz();
    
==== mod1.js (0 errors) ====
    // error
    
    /** @typedef {number} Foo */
    class Foo { } // should error
    
    /** @typedef {number} Bar */
    exports.Bar = class { }
    
    /** @typedef {number} Baz */
    module.exports = {
        Baz: class { }
    }
    
    // ok
    
    /** @typedef {number} Qux */
    var Qux = 2;
    
    /** @typedef {number} Quid */
    exports.Quid = 2;
    
    /** @typedef {number} Quack */
    module.exports = {
        Quack: 2
    }
    